--- a/server.cfg
+++ b/server.cfg
@@ -1,19 +1,17 @@
 echo Executing Server Config...
-lanmode 1
-rcon_password 123321
-maxplayers 1
+lanmode 0
+rcon_password pass123
+maxplayers 50
 port 7777
-hostname TDEditor 1.15
-gamemode0 bare 1
-filterscripts ntd cameditor
-plugins sscanf TDE
+hostname SA-MP 0.3 Server
+gamemode0 noxe
+filterscripts
 announce 0
 query 1
 weburl www.sa-mp.com
+maxnpc 0
 onfoot_rate 40
 incar_rate 40
 weapon_rate 40
 stream_distance 300.0
 stream_rate 1000
-maxnpc 0
-logtimeformat [%H:%M:%S]
